# OptiCombi

./: .SMTWTP.h.swp  .climbing_one_smtwtp_main.cpp.swp  .gitignore  Instance.cpp  Instance.h  InstanceGenerator.cpp  InstanceGenerator.h  InstanceGenerator100.cpp  InstanceGenerator100.h  InstanceGenerator1000.cpp  InstanceGenerator1000.h  README.md  SMTWTP.cpp  SMTWTP.h  SMTWTP_ILS.cpp  SMTWTP_ILS.h  SMTWTP_climbing.cpp  SMTWTP_climbing.h  SMTWTP_initializer.cpp  SMTWTP_initializer.h  SMTWTP_population.cpp  SMTWTP_population.h  SMTWTP_simple.cpp  SMTWTP_simple.h  SMTWTP_vnd.cpp  SMTWTP_vnd.h  SMTWTP_vns.cpp  SMTWTP_vns.h  climbing_one_smtwtp_main.cpp  climbing_smtwtp_main.cpp  climbing_test.cpp  compile.sh  create_graph.py  generate_18.sh  simple_smtwtp_main.cpp  super_main.cpp
cmake/: CMakeLists.txt
instances/: optimal_results.txt  wt100.txt  wt_1000_1.txt  wt_1000_10.txt  wt_1000_11.txt  wt_1000_12.txt  wt_1000_13.txt  wt_1000_14.txt  wt_1000_15.txt  wt_1000_16.txt  wt_1000_17.txt  wt_1000_18.txt  wt_1000_19.txt  wt_1000_2.txt  wt_1000_20.txt  wt_1000_21.txt  wt_1000_22.txt  wt_1000_23.txt  wt_1000_24.txt  wt_1000_25.txt  wt_1000_3.txt  wt_1000_4.txt  wt_1000_5.txt  wt_1000_6.txt  wt_1000_7.txt  wt_1000_8.txt  wt_1000_9.txt  wtbest100b.txt  wtinfo.txt
save/: GA-basic-insert.csv  GA-basic.csv  GA-second.csv  ILS-3000.csv  ILS-3000000.csv  ILS-eis-3.csv  ILS.csv  ILS10.csv  ILS6.csv  ILSMEGA.csv  climbing1.csv  const.csv  create_graph.py  final.csv  vnd-alea.csv  vnd-mega.csv  vnd.csv
